# geometry

./: .travis.yml  LICENSE  README.md  geometry.cabal
benchmarks/: Folds.hs  Samples.hs
src/: Geometry.hs
src/Geometry/: Align.hs  Angle.hs  BoundingBox.hs  Combinators.hs  CubicSpline.hs  Direction.hs  Envelope.hs  HasOrigin.hs  Juxtapose.hs  Located.hs  Parametric.hs  Path.hs  Points.hs  Query.hs  Segment.hs  Size.hs  Space.hs  Tangent.hs  Trace.hs  Trail.hs  TrailLike.hs  Transform.hs
src/Geometry/CubicSpline/: Boehm.hs  Internal.hs
src/Geometry/Path/: Unboxed.hs
src/Geometry/ThreeD/: Camera.hs  Combinators.hs  Shapes.hs  Size.hs  Transform.hs  Types.hs  Vector.hs
src/Geometry/Trail/: Unboxed.hs
src/Geometry/TwoD/: Align.hs  Arc.hs  Combinators.hs  Curvature.hs  Ellipse.hs  Offset.hs  Path.hs  Points.hs  Polygons.hs  Segment.hs  Shapes.hs  Size.hs  Transform.hs  Types.hs  Vector.hs
src/Geometry/TwoD/Segment/: Bernstein.hs
