name:                geometry
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    -- Geometry.CubicSpline
    -- Geometry.CubicSpline.Boehm
    -- Geometry.CubicSpline.Internal
    -- Geometry.Parametric.Adjust
    -- Geometry.SegSequence
    -- Geometry.ThreeD.Align
    -- Geometry.ThreeD.Camera
    -- Geometry.ThreeD.Light
    -- Geometry.ThreeD.Projection
    -- Geometry.ThreeD.Shapes
    -- Geometry.ThreeD.Size
    -- Geometry.ThreeD.Transform
    -- Geometry.ThreeD.Types
    -- Geometry.ThreeD.Vector
    -- Geometry.Trail.Class
    -- Geometry.Trail.Segment
    -- Geometry.Trail.UnboxedTrail
    -- Geometry.Transform.Matrix
    -- Geometry.Transform.ScaleInv
    Geometry.TwoD.Ellipse
    -- Geometry.TwoD.Offset
    Geometry.TwoD.Arc
    Geometry
    -- Geometry.Align
    Geometry.Angle
    Geometry.BoundingBox
    Geometry.Combinators
    Geometry.Direction
    Geometry.Envelope
    Geometry.HasOrigin
    Geometry.Juxtapose
    Geometry.Located
    Geometry.Parametric
    Geometry.Path
    Geometry.Path.Unboxed
    Geometry.Points
    Geometry.Query
    Geometry.Segment
    Geometry.Size
    Geometry.Space
    Geometry.Tangent
    Geometry.Trace
    Geometry.Trail
    Geometry.Trail.Unboxed
    Geometry.TrailLike
    Geometry.Transform
    -- Geometry.TwoD.Align
    Geometry.TwoD.Combinators
    Geometry.TwoD.Path
    Geometry.TwoD.Points
    Geometry.TwoD.Polygons
    Geometry.TwoD.Segment
    Geometry.TwoD.Segment.Bernstein
    Geometry.TwoD.Shapes
    Geometry.TwoD.Size
    Geometry.TwoD.Transform
    Geometry.TwoD.Types
    Geometry.TwoD.Vector
  -- other-modules:       
  other-extensions:
    BangPatterns DeriveFunctor EmptyDataDecls FlexibleContexts
    FlexibleInstances GADTs GeneralizedNewtypeDeriving
    MultiParamTypeClasses StandaloneDeriving TemplateHaskell
    TypeFamilies TypeOperators UndecidableInstances
    ConstrainedClassMethods RankNTypes NoMonomorphismRestriction
    ScopedTypeVariables ViewPatterns Rank2Types CPP DeriveGeneric
    DefaultSignatures DataKinds LambdaCase DeriveDataTypeable
    ConstraintKinds TypeSynonymInstances
  build-depends:
    base >=4.9 && <4.10,
    lens >=4.14 && <4.15,
    monoid-extras >=0.4 && <0.5,
    linear >=1.20 && <1.21,
    cereal >=0.5 && <0.6,
    containers >=0.5 && <0.6,
    data-default-class,
    ghc-prim,
    fingertree,
    diagrams-solve,
    adjunctions >=4.3 && <4.4,
    primitive >=0.6 && <0.7,
    vector >=0.11 && <0.12,
    hashable >=1.2 && <1.3,
    distributive >=0.5 && <0.6,
    unordered-containers >=0.2 && <0.3,
    array >=0.5 && <0.6,
    profunctors,
    intervals
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:      -Wall
