name:                geometry
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Geometry
    Geometry.CubicSpline
    Geometry.CubicSpline.Boehm
    Geometry.CubicSpline.Internal
    Geometry.ThreeD.Camera
    Geometry.ThreeD.Combinators
    Geometry.ThreeD.Shapes
    Geometry.ThreeD.Size
    Geometry.ThreeD.Transform
    Geometry.ThreeD.Types
    Geometry.ThreeD.Vector
    Geometry.Angle
    Geometry.BoundingBox
    Geometry.Combinators
    Geometry.Direction
    Geometry.Envelope
    Geometry.HasOrigin
    Geometry.Juxtapose
    Geometry.Located
    Geometry.Parametric
    Geometry.Path
    Geometry.Points
    Geometry.Query
    Geometry.Segment
    Geometry.Size
    Geometry.Space
    Geometry.Trace
    Geometry.Trail
    Geometry.Transform
    Geometry.TwoD.Arc
    Geometry.TwoD.Combinators
    Geometry.TwoD.Curvature
    Geometry.TwoD.Ellipse
    Geometry.TwoD.Offset
    Geometry.TwoD.Path
    Geometry.TwoD.Points
    Geometry.TwoD.Polygons
    Geometry.TwoD.Segment
    Geometry.TwoD.Segment.Bernstein
    Geometry.TwoD.Shapes
    Geometry.TwoD.Size
    Geometry.TwoD.Transform
    Geometry.TwoD.Types
    Geometry.TwoD.Vector
  -- other-modules:       
  other-extensions:
    BangPatterns DeriveFunctor EmptyDataDecls FlexibleContexts
    FlexibleInstances GADTs GeneralizedNewtypeDeriving
    MultiParamTypeClasses StandaloneDeriving TemplateHaskell
    TypeFamilies TypeOperators UndecidableInstances
    ConstrainedClassMethods RankNTypes NoMonomorphismRestriction
    ScopedTypeVariables ViewPatterns Rank2Types CPP DeriveGeneric
    DefaultSignatures DataKinds LambdaCase DeriveDataTypeable
    ConstraintKinds TypeSynonymInstances
  build-depends:
    base,
    adjunctions,
    array,
    binary,
    bytes,
    cereal,
    containers,
    contravariant,
    data-default-class,
    deepseq,
    diagrams-solve,
    distributive,
    hashable,
    intervals,
    lens,
    linear,
    monoid-extras > 0.5,
    profunctors,
    unordered-containers,
    vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
